--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ p#description {
         position: relative;
         display: block;
         margin: 0 auto;
-        margin-top: -2%;
+       bottom: 2%;
         width: 80px;
        z-index: 1;
         display: flex;
