--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ html {
     justify-content: center;
 
 }
+#content{
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-between;
+}
 
 #eventCard {
     width: 80%;
@@ -225,6 +232,13 @@ p#description {
         width: 100%;
         height: 60%;
     }
+    #content{
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-between;
+    }
     #social{
         width: 5%;
         height: 20%;
@@ -289,7 +303,7 @@ p#description {
         position: relative;
         display: block;
         margin: 0 auto;
-       bottom: 1%;
+       
         width: 80px;
        z-index: 1;
         display: flex;
@@ -308,6 +322,7 @@ p#description {
         
        
     }
+    
     h1#title:hover{
         -webkit-text-stroke: 0px black;
         color:black;
